fix controller return values
